[package]
name = "MTH"
version = "0.1.0"
edition = "2021"
authors = ["Cat"]
description = "A webview utility to show markdown to html"
license = "MIT"
documentation = "https://github.com/Vova-max-png/MTH"
repository = "https://github.com/Vova-max-png/MTH"
categories = ["Command line utilities"]

[dependencies]
aurelius = "0.7.5"
clap = { version = "4.1.8", features = ["derive"] }
futures = "0.3.27"
markdown = "0.3.0"
tokio = { version = "1.14.0", features = ["rt", "macros", "io-util", "process", "rt-multi-thread"] }
wry = "0.27.0"
